[tool.poetry]
name = "disk-speed-list"
version = "0.1.0"
description = ""
authors = ["Sandip Bhattacharya <sandipb@showmethesource.org>"]
readme = "README.md"
packages = [{include = "disk_speed_list"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
